[gd_scene load_steps=8 format=3 uid="uid://jx7ma17q6xrj"]

[ext_resource type="Script" path="res://src/world_environment.gd" id="1_20f8k"]
[ext_resource type="PackedScene" uid="uid://cw7y606enuklv" path="res://src/player.tscn" id="1_c8p6q"]
[ext_resource type="PackedScene" uid="uid://ff1c62w1jhw8" path="res://src/environment.tscn" id="1_vriof"]
[ext_resource type="Script" path="res://src/EnemySpawner.gd" id="3_yx0y0"]
[ext_resource type="AudioStream" uid="uid://di2d3t6xbrli2" path="res://assets/kenney/kenney_impact-sounds/Audio/impactWood_medium_003.ogg" id="4_7ueaf"]
[ext_resource type="PackedScene" uid="uid://cqpb1djfqt4an" path="res://src/barrel.tscn" id="4_tksgu"]

[sub_resource type="Environment" id="Environment_okurb"]
background_mode = 1
background_color = Color(0.513237, 0.513231, 0.513233, 1)

[node name="World" type="Node3D"]

[node name="Environment" parent="." instance=ExtResource("1_vriof")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_okurb")
script = ExtResource("1_20f8k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.953077, 0.137822, 0.269537, -0.116689, -0.654303, 0.747175, 0.279336, -0.743567, -0.607519, 0, 2.86158, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_c8p6q")]

[node name="EnemySpawner" type="Node3D" parent="."]
script = ExtResource("3_yx0y0")

[node name="SpawnSound" type="AudioStreamPlayer3D" parent="EnemySpawner"]
stream = ExtResource("4_7ueaf")
pitch_scale = 2.29
bus = &"Sfx"

[node name="TimeToWave" type="Timer" parent="EnemySpawner"]
one_shot = true
autostart = true

[node name="NegativeBound" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.1461, 0, -17.1236)

[node name="PostiveBound" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8539, 0, 16.8764)

[node name="Barrel" parent="." instance=ExtResource("4_tksgu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.10732, 4.76837e-07, -2.62643)

[node name="Barrel2" parent="." instance=ExtResource("4_tksgu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.67675, 4.76837e-07, -4.82919)

[node name="Barrel3" parent="." instance=ExtResource("4_tksgu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.01418, 4.76837e-07, 2.25627)

[node name="Barrel4" parent="." instance=ExtResource("4_tksgu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.49325, 4.76837e-07, 8.19624)

[connection signal="timeout" from="EnemySpawner/TimeToWave" to="EnemySpawner" method="_on_time_to_wave_timeout"]
